# rag-pocs

./: .env-example  .gitignore  langchain-rag-canonical-basic.py  llamaindex-rag-canonical-basic.py  main.py  pyproject.toml  requirements.txt
