[project]
name = "rag-pocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.1",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.2",
    "langchain-text-splitters>=1.0.0",
    "llama-index>=0.14.10",
    "pypdf>=6.4.1",
]
